consolidated css header, fixe alignmentissues in header and nav list items

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,20 @@
+/*apply class lesson here on root setting*/
+
 :root {
     --first-color:black;
     --secondary-color:teal;
     --third-color:gray; 
 }
 
+/*default settings*/
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+
+/*start css element styling */
 
 section{
     display: flex;
@@ -25,7 +31,8 @@ header {
     width: 100%;
     display: flex;
     justify-content:space-between ;
-    background-color: var(--first-color);align-items: center;
+    background-color: var(--first-color);
+    align-items: center;
 }
 
 header h1 {
@@ -54,12 +61,9 @@ header nav ul{
 header nav ul li {
     margin: 12px 6px;
     padding: 0px 15px;
-    width: 100%;
-    display: flex ;
-    align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-end;
     list-style: none;
 }
 
